[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lockbot"
description = "control the door"
#long_description = file: src/README_package.md
#long_description_content_type = text/markdown
authors = [{name = "Lautis Hannover", email = "hallo@lautis-hannover.de"}]
requires-python = ">=3.12"
dependencies = [
    "httpx >= 0.24",
    "python-telegram-bot >= 20.3",
    "apscheduler >= 3.10",
    "pytz",
    "requests",
    "flask"
]
dynamic = ["version"]

[project.optional-dependencies]
doc = [
]
dev = [
    "pytest"
]

[project.scripts]
lockbot = "lockbot.__main__:main"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["lockbot"]

[tool.setuptools.dynamic]
version = {attr = "lockbot.__version__"}

[tool.pytest.ini_options]
#addopts = "--cov=src/lockbot"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
omit = [ ]